# NeuroVolt-OTA

./: .gitignore  CMakeLists.txt  README.md
ai_service/: anomaly_detector.py  ml_model.py
backend/: main.py
configs/: firmware_package.json
dashboard/: index.html  script.js  style.css
datasets/: vehicle_telemetry.csv
docs/: api_documentation.md  architecture.md  demo_flow.md  patent_note.md
include/agents/: MotorAgent.hpp  ThermalAgent.hpp  VehicleOrchestrator.hpp
include/analytics/: RiskScorer.hpp  TelemetryLogger.hpp  TelemetryStore.hpp
include/can/: CANManager.hpp
include/ecu/: BMS_ECU.hpp  MotorECU.hpp
include/events/: EventManager.hpp
include/ota/: FirmwarePackage.hpp  OTAHistoryLogger.hpp  OTAManager.hpp  OTARequestHandler.hpp  OTASafetyValidator.hpp
scripts/: run_all.sh  stop_all.sh
src/: main.cpp
src/agents/: MotorAgent.cpp  ThermalAgent.cpp  VehicleOrchestrator.cpp
src/analytics/: RiskScorer.cpp  TelemetryLogger.cpp  TelemetryStore.cpp
src/can/: CANManager.cpp
src/ecu/: BMS_ECU.cpp  MotorECU.cpp
src/events/: EventManager.cpp
src/ota/: FirmwarePackage.cpp  OTAHistoryLogger.cpp  OTAManager.cpp  OTARequestHandler.cpp  OTASafetyValidator.cpp
